# hedge-fund-at-home

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.cursor/rules/: git-authorship.mdc
config/: config.yaml.example
docker/: Dockerfile
docs/: AWS_SETUP.md  EDUCATION.md  GETTING_STARTED.md  IBKR_SETUP.md  LEARNING_PATH.md  LEARNING_UI.md  PAPER_TRADING_SETUP.md  README.md  RENDER_DEPLOY.md  STATIC_DEPLOY.md  STRATEGY_GUIDE.md
hedgekit/: __init__.py
hedgekit/broker/: README.md  __init__.py  base.py  custom_broker.py.example  factory.py  ibkr.py  simulated.py
hedgekit/cli/: backtest.py  learn_assets.py  learn_ui.py  render_serve.py  run.py
hedgekit/cloud/: __init__.py  aws.py
hedgekit/core/: config.py  logging.py  marketdata.py  schemas.py
hedgekit/data/: README.md
hedgekit/execution/: runner.py
hedgekit/risk/: __init__.py  gate.py
hedgekit/strategy/: __init__.py  base.py  registry.py
hedgekit/ui/: __init__.py  config_api.py  doc_serve.py  markdown_render.py  snapshot.py
infrastructure/: README.md
infrastructure/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build_learn_site.py  republish-to-github.sh  serve_learn_site.py
strategies/: README.md  __init__.py
strategies/example_pairs/: README.md  (+1 more)
tests/: test_markdown_render.py  test_risk.py  test_simulated_broker.py  test_strategy_example.py
web/: README.md  api-client.js  app.js  index.html  learning-data.js  pairs-floor.js  static-config.js  trading-floor.html  trading-floor.js
(+11 files in other folders)
