[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedgekit"
version = "0.1.0"
description = "Hedge Fund at Home: educational systematic trading kit with simulated execution by default."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hedge Fund at Home Contributors"}]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "ib_insync>=0.9.86",
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "boto3>=1.34",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
hfah-run = "hedgekit.cli.run:main"
hfah-backtest = "hedgekit.cli.backtest:main"
hfah-learn-ui = "hedgekit.cli.learn_ui:main"
hfah-render-serve = "hedgekit.cli.render_serve:main"

[tool.setuptools.packages.find]
include = ["hedgekit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
